@@ -1,6 +1,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*arrayfire-3.2.0 (24 Nov 2015)
+
+  24 Nov 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +arrayfire-3.2.0.ebuild:
+  sci-libs/arrayfire: Version bump
+
 *arrayfire-3.1.3 (02 Nov 2015)
 
   02 Nov 2015; Marius Brehler <marbre@linux.sungazer.de>
